--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,6 +15,8 @@ sites:
     url: https://evrenmuh.com.tr
   - name: Shine at Date
     url: https://shineatdate.com
+  - name: Wiyanawanda Fest Bodrum (non-bw/a)
+    url: https://wiyanawandafest.com
 
 status-website: 
   theme: dark
