Added Flamingo Psikoloji and SAK Vinç on the tracking list.

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,8 +11,12 @@ sites:
     url: https://smart.betterwith.agency
   - name: Esra BULUT
     url: https://esrabulut.com.tr
+  - name: Flamingo Psikoloji
+    url: https://flamingopsikoloji.com
   - name: Samsun Esnaf ve Sanatkarlar Kredi ve Kefalet Kooperatifi
     url: https://samsunekk.com
+  - name: SAK Vinç
+    url: https://sakvinc.com.tr
   - name: Evren Mühendislik
     url: https://evrenmuh.com.tr
   - name: Shine at Date
