Tamer Şahinoğlu added to the list.

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,6 +19,8 @@ sites:
     url: https://sakvinc.com.tr
   - name: Evren Mühendislik
     url: https://evrenmuh.com.tr
+  - name: Tamer Şahinoğlu
+    url: https://tamersahinoglu.com
   - name: Shine at Date
     url: https://shineatdate.com
   - name: Wiyanawanda Fest Bodrum (non-bw/a)
