--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,7 +23,7 @@ sites:
     url: https://tamersahinoglu.com
   - name: Shine at Date
     url: https://shineatdate.com
-  - name: Wiyanawanda Fest Bodrum (non-bw/a)
+  - name: Wiyanawanda Fest Bodrum
     url: https://wiyanawandafest.com
 
 status-website: 
