--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,6 +25,8 @@ sites:
     url: https://tamersahinoglu.com
   - name: Shine at Date
     url: https://shineatdate.com
+    - name: Samsun Gençlik Platformu
+    url: https://samsungenclikplatformu.org.tr
   - name: Wiyanawanda Fest Bodrum
     url: https://wiyanawandafest.com
 
