--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,6 +15,8 @@ sites:
     url: https://esrabulut.com.tr
   - name: Flamingo Psikoloji
     url: https://flamingopsikoloji.com
+  - name: Mon Yoga
+    url: https://monyoga.co
   - name: Samsun Esnaf ve Sanatkarlar Kredi ve Kefalet Kooperatifi
     url: https://samsunekk.com
   - name: SAK Vinç
