--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -29,6 +29,8 @@ sites:
     url: https://shineatdate.com
   - name: Samsun Gençlik Platformu
     url: https://samsungenclikplatformu.org.tr
+  - name: Zirve Psikoloji
+    url: https://zirvepsikoloji.com
   - name: Wiyanawanda Fest Bodrum
     url: https://wiyanawandafest.com
 
