--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,6 +11,8 @@ sites:
     url: https://support.bw.agency
   - name: bw/a Smart
     url: https://smart.betterwith.agency
+  - name: Aysu Elbi 
+    url: https://seans.aysuelbi.com
   - name: Esra BULUT
     url: https://esrabulut.com.tr
   - name: Flamingo Psikoloji
