--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,6 +13,8 @@ sites:
     url: https://smart.betterwith.agency
   - name: Aysu Elbi 
     url: https://seans.aysuelbi.com
+  - name: Emir Tarlan
+    url: https://emirtarlan.com
   - name: Esra BULUT
     url: https://esrabulut.com.tr
   - name: Flamingo Psikoloji
