--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -29,6 +29,8 @@ sites:
     url: https://evrenmuh.com.tr
   - name: Tamer Şahinoğlu
     url: https://tamersahinoglu.com
+  - name: Samsun Çocuk Gelişimi
+    url: https://samsuncocukgelisimi.com
   - name: Shine at Date
     url: https://shineatdate.com
   - name: Samsun Gençlik Platformu
